<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/order_confirm"
        android:layout_width="411dp"
        android:layout_height="38dp"
        android:background="#FFFFFF"
        android:text="@string/your_order_is_confirmed"
        android:textAlignment="center"
        android:textColor="#88F2FF"
        android:textColorHighlight="#88F2FF"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="347dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#88F2FF"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/click_image"
        app:layout_constraintVertical_bias="0.952" />

    <ImageView
        android:id="@+id/click_image"
        android:layout_width="103dp"
        android:layout_height="57dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="172dp"
        android:contentDescription="@string/confirm"
        app:layout_constraintBottom_toBottomOf="@+id/order_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_action_name" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="119dp"
        android:text="@string/any_question_contact_us_at"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <TextView
        android:id="@+id/contact_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/contact"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_text"
        app:layout_constraintVertical_bias="0.013" />

    <TextView
        android:id="@+id/office_hour_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/office_hour"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/comtact_num_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:text="@string/phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_text"
        app:layout_constraintStart_toEndOf="@+id/contact_text" />

    <TextView
        android:id="@+id/email_add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:text="@string/support_uhealth_com"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_text"
        app:layout_constraintStart_toEndOf="@+id/email_text" />

    <TextView
        android:id="@+id/hour_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/open_day"
        app:layout_constraintBaseline_toBaselineOf="@+id/office_hour_text"
        app:layout_constraintStart_toEndOf="@+id/office_hour_text" />

</androidx.constraintlayout.widget.ConstraintLayout>